logs/coinor.gimpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coinor'...
Listing './lib/python3.5/site-packages/coinor/blimpy'...
Compiling './lib/python3.5/site-packages/coinor/blimpy/LinkedList.py'...
***   File "./lib/python3.5/site-packages/coinor/blimpy/LinkedList.py", line 110
    raise KeyError, "Index out of bounds"
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinor/blimpy/Stack.py'...
***   File "./lib/python3.5/site-packages/coinor/blimpy/Stack.py", line 63
    print s.pop()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coinor/gimpy'...
Listing './lib/python3.5/site-packages/coinor/gimpy/examples'...
Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/BB.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/BB.py", line 128
    print "==========================================="
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/SAT.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/SAT.py", line 40
    print G
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/maxflow.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/maxflow.py", line 51
    print n, m, g.get_edge_attr(n, m, 'flow')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/mincostflow.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/mincostflow.py", line 53
    print n, m, g.get_edge_attr(n, m, 'flow')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/simplex_test.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/simplex_test.py", line 256
    print 'All problems solved accurately.'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/graph.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/graph.py", line 232
    print "Pygame module not installed, graphical display disabled"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/tree.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/tree.py", line 326
    print root
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coinor.blimpy-1.3.5.egg-info'...
Listing './lib/python3.5/site-packages/coinor.gimpy-1.3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
